Added: - Tidehopper Mob, Spawn Egg

--- a/src/main/resources/assets/tidemark_additions/lang/en_us.json
+++ b/src/main/resources/assets/tidemark_additions/lang/en_us.json
@@ -29,5 +29,6 @@
   "item.tidemark_additions.abyssal_resonance_leggings": "Abyssal Resonance Leggings",
   "item.tidemark_additions.abyssal_resonance_boots": "Abyssal Resonance Boots",
 
+  "entity.tidemark_additions.tidehopper": "Tidehopper",
   "item.tidemark_additions.tidehopper_spawn_egg": "Tidehopper Spawn Egg"
 }
