Added: - Resonant Scale (which drops when warden is killed) - Resonance Effect - Resonance Effect gets applied with full set of Abyssal Resonance Armor

--- a/src/main/resources/assets/tidemark_additions/lang/en_us.json
+++ b/src/main/resources/assets/tidemark_additions/lang/en_us.json
@@ -4,6 +4,8 @@
   "item.tidemark_additions.driftsteel": "Driftsteel",
   "item.tidemark_additions.driftsteel_fragment": "Driftsteel Fragment",
 
+  "effect.tidemark_additions.resonance": "Resonance",
+
   "item.tidemark_additions.tidesteel_ingot": "Tidesteel Ingot",
 
   "item.tidemark_additions.tidesteel_sword": "Tidesteel Sword",
@@ -17,6 +19,7 @@
   "item.tidemark_additions.tidesteel_boots": "Tidesteel Boots",
 
   "item.tidemark_additions.abyssal_resonance_ingot": "Abyssal Resonance Ingot",
+  "item.tidemark_additions.resonant_scale": "Resonant Scale",
   "item.tidemark_additions.abyssal_hide": "Abyssal Hide",
 
   "item.tidemark_additions.abyssal_resonance_sword": "Abyssal Resonance Sword",
