Added: - Changed Resonance Effect to UnderTide Effect

--- a/src/main/resources/assets/tidemark_additions/lang/en_us.json
+++ b/src/main/resources/assets/tidemark_additions/lang/en_us.json
@@ -4,7 +4,7 @@
   "item.tidemark_additions.driftsteel": "Driftsteel",
   "item.tidemark_additions.driftsteel_fragment": "Driftsteel Fragment",
 
-  "effect.tidemark_additions.resonance": "Resonance",
+  "effect.tidemark_additions.undertide": "Undertide",
 
   "item.tidemark_additions.tidesteel_ingot": "Tidesteel Ingot",
 
