--- a/src/main/resources/assets/tidemark_additions/lang/en_us.json
+++ b/src/main/resources/assets/tidemark_additions/lang/en_us.json
@@ -4,7 +4,7 @@
   "item.tidemark_additions.driftsteel": "Driftsteel",
   "item.tidemark_additions.driftsteel_fragment": "Driftsteel Fragment",
 
-  "effect.tidemark_additions.undertide": "Undertide",
+  "effect.tidemark_additions.tidemarked": "Tidemarked",
 
   "item.tidemark_additions.tidesteel_ingot": "Tidesteel Ingot",
 
@@ -18,19 +18,19 @@
   "item.tidemark_additions.tidesteel_leggings": "Tidesteel Leggings",
   "item.tidemark_additions.tidesteel_boots": "Tidesteel Boots",
 
-  "item.tidemark_additions.abyssal_resonance_ingot": "Abyssal Resonance Ingot",
+  "item.tidemark_additions.tidemarked_ingot": "Tidemarked Ingot",
   "item.tidemark_additions.resonant_scale": "Resonant Scale",
   "item.tidemark_additions.abyssal_hide": "Abyssal Hide",
 
-  "item.tidemark_additions.abyssal_resonance_sword": "Abyssal Resonance Sword",
-  "item.tidemark_additions.abyssal_resonance_pickaxe": "Abyssal Resonance Pickaxe",
-  "item.tidemark_additions.abyssal_resonance_shovel": "Abyssal Resonance Shovel",
-  "item.tidemark_additions.abyssal_resonance_axe": "Abyssal Resonance Axe",
-  "item.tidemark_additions.abyssal_resonance_hoe": "Abyssal Resonance Hoe",
-  "item.tidemark_additions.abyssal_resonance_helmet": "Abyssal Resonance Helmet",
-  "item.tidemark_additions.abyssal_resonance_chestplate": "Abyssal Resonance Chestplate",
-  "item.tidemark_additions.abyssal_resonance_leggings": "Abyssal Resonance Leggings",
-  "item.tidemark_additions.abyssal_resonance_boots": "Abyssal Resonance Boots",
+  "item.tidemark_additions.tidemarked_sword": "Tidemarked Sword",
+  "item.tidemark_additions.tidemarked_pickaxe": "Tidemarked Pickaxe",
+  "item.tidemark_additions.tidemarked_shovel": "Tidemarked Shovel",
+  "item.tidemark_additions.tidemarked_axe": "Tidemarked Axe",
+  "item.tidemark_additions.tidemarked_hoe": "Tidemarked Hoe",
+  "item.tidemark_additions.tidemarked_helmet": "Tidemarked Helmet",
+  "item.tidemark_additions.tidemarked_chestplate": "Tidemarked Chestplate",
+  "item.tidemark_additions.tidemarked_leggings": "Tidemarked Leggings",
+  "item.tidemark_additions.tidemarked_boots": "Tidemarked Boots",
 
   "entity.tidemark_additions.tidehopper": "Tidehopper",
   "item.tidemark_additions.tidehopper_spawn_egg": "Tidehopper Spawn Egg"
